--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     margin:0;
     padding:0;
     font-family: 'Roboto', sans-serif;
@@ -224,4 +224,4 @@ a:hover {
     font-size: 16px;
     font-weight: 400;
 }
-
+ */
